src/style/less/page/timeline.less
.list-block{
  .load-result{
    width: 100%;
    height: 30px;
    position: absolute;
    bottom: 50px;
    left: 0;
    background-color: @mainColor;
    color: #ffffff;
    z-index: 1000;
    text-align: center;
    line-height: 30px;
    opacity: 0;
  }
  .time-line-content{
    .item-content{
      .content-block();

      &:active{
        .list-active(#f9f9f9);
      }

      .item-inner{
        padding: 0;
        border: 0;
        background-repeat: no-repeat;
        > a{
          color: #6d6d72;

        }

        .item-tools {
          background-color: #f9f9f9;
          color: #909090;
          height: 35px;
          line-height: 35px;
          border-top: 1px solid #f0f0f0;
          font-size: 14px;
          margin-bottom: -1px;

          .tool-line {
            border-left: 1px solid #f0f0f0;
            height: 28px;
            margin-top: 5px;
            width: 1%;
          }

          > ul {
            > li {
              float: left;
              width: 32%;
              text-align: center;

              > a{
                &:link {
                  color: #929292;
                }
              }
            }
          }

          i{
            &.icon {
              font-size: 20px;
              margin-right: 5px;
              line-height: 20px;
            }
          }
        }
      }
    }
  }

  ul{
    ul {
      padding-left: 0;
    }
  }
}

